# alica-messages-console

./: Cargo.toml  Dockerfile  README.md  cli.yml
src/: commands.rs  communication.rs  helper.rs  lib.rs  main.rs
src/alica/: messages.rs
src/command/: batch.rs  mod.rs  state.rs  transaction.rs
src/filter/: mod.rs
src/sawtooth/: communication.rs  factory.rs  mod.rs
