[package]
name = "alica-messages-client"
version = "0.1.0"
authors = ["Sven Starcke <sst97@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33.1", features = ["yaml"] }
dirs = "3.0.1"
data-encoding = "2.2.1"
protobuf = "2.14.0"
rand = "0.7.3"
sawtooth-alica-message-transaction-payload = {version = "0.1.0", git = "https://gitlab.com/sst97/sawtooth-alica-message-transaction-payload.git"}
sawtooth-sdk = "0.4.4"
sha2 = "0.9.0"
uuid = { version = "0.8", features = ["v4"] }